2010-03-02  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el: Bind [M-S-f12] to
	semantic-analyze-proto-impl-toggle.
	: Bind "C-c SPC" to semantic-ia-complete-symbol-menu in
	window-system, or semantic-ia-complete-symbol in console.
	: Add (global-ede-mode 1).
	: Enable global-semantic-tag-folding-mode.

	* init-basic.el (emacs-lisp-mode-hook): Turn off auto-fill-mode in
	emacs-lisp-mode.
	(find-tag): Add advice tags-file-name-advice.
	(x-stretch-cursor): Add (setq x-stretch-cursor t).
	(ring-bell-function): Add (setq ring-bell-function 'ignore).

2010-03-01  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (generic-x): Load generic-x.

2010-02-27  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Open size-indication-mode.
	: Bind C-x C-b to ibuffer.

2010-02-26  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Add highlight-tail.

	* lisp/highlight-tail.el: Add.

	* init-site.el: Add pulse setting.

	* init-basic.el (find-dotemacs-file): Add.

2010-02-24  Meteor Liu  <meteor1113@gmail.com>

	* dotemacs.el: Delete.

	* init-misc.el: Format.

	* init-site.el: Format.

	* init-basic.el: Format.

	* init-misc.el: Enable auto-complete-mode in change-log-mode.

	* init-basic.el: Bind (kbd "C-c q") to (auto-fill-mode).
	Trun on auto-fill-mode in change-log-mode.
	(c-mode-common-hook): Turn on auto-fill-mode in cc-mode.
	(emacs-lisp-mode-hook): Turn on auto-fill-mode in emacs-lisp-mode.

2010-02-23  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (uniquify-buffer-name-style): Set to 'forward.

	* init-misc.el (require): Change highlight-symbol-idle-delay to 0.05.

2010-02-22  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (grep-current-dir): Change "grep -nr" to "grep -inr".

2010-02-03  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Delete (setq compilation-window-height 10).

2010-02-01  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: (setq yas/wrap-around-region t).

2010-01-28  Meteor Liu  <meteor1113@gmail.com>
