@@ -6,6 +6,7 @@
 	window-system, or semantic-ia-complete-symbol in console.
 	: Add (global-ede-mode 1).
 	: Enable global-semantic-tag-folding-mode.
+	: Set semantic-tag-folding key.
 
 	* init-basic.el (emacs-lisp-mode-hook): Turn off auto-fill-mode in
 	emacs-lisp-mode.
